--- a/fe/src/app/customer/customer-booking/customer-booking-history/customer-history.component.html
+++ b/fe/src/app/customer/customer-booking/customer-booking-history/customer-history.component.html
@@ -62,7 +62,7 @@
                 <th scope="row" (click)="viewDetailinSchedule(service)">
                   <div class="media align-items-center">
                     <div class="media-body">
-                      <span class="mb-0 text-sm">{{service.bookingId}} - {{service.hostName}}</span>
+                      <span class="mb-0 text-sm">{{service.id}} - {{service.hostName}}</span>
                     </div>
                   </div>
                 </th>
