--- a/fe/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/fe/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -151,11 +151,11 @@
             </a>
             <a routerLinkActive="active" [routerLink]="['/customer-schedule']" class="dropdown-item">
               <i class="ni ni-calendar-grid-58"></i>
-              <span>Xem lịch đẵ đặt</span>
+              <span>Xem lịch dịch vụ</span>
             </a>
             <a routerLinkActive="active" [routerLink]="['/customer-history']" class="dropdown-item">
               <i class="ni ni-calendar-grid-58"></i>
-              <span>Xem lịch sử đặt hàng</span>
+              <span>Lịch sử đặt hàng</span>
             </a>
             <a routerLinkActive="active" [routerLink]="['/change-pass']" class="dropdown-item">
               <i class="fas fa-lock"></i>
