--- a/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.html
+++ b/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.html
@@ -9,101 +9,96 @@
         <div class="title_note"> *Vui lòng xác nhận lại thông tin đơn hàng bao gồm thông tin cá nhân và dịch vụ</div>
         <div class="title_note rednoti"> Dịch vụ bổ sung không được tính phí vào đơn dịch vụ, phí sẽ được bổ sung sau
           khi người dọn xác nhận và thông báo lại</div>
-          <div *ngIf="status == 'DONE'" class="rate">
-            <span *ngIf="status == 'DONE' && !noneRate">Điểm đánh giá dịch vụ: <div class="star-rating" [innerHTML]="generateStarRating(ratingAverage)"></div></span>
-            <div *ngIf="status == 'DONE' && noneRate"><button class="btn btn-primary" style="">Đánh giá</button></div> 
-          </div>
-          <div class="information">
-            <div class="infor-col1">
-              <h6 class="text-primary text-uppercase resize">Thông tin người dùng</h6>
-              <div class="input-group">
-                <p style="width: 90%; display: block;">
-                  Tên chủ nhà(*): {{infor.hostName}}
-                </p>
-                <p style="width: 90%; display: block;">Số điện thoại(*): {{infor.hostPhone}}</p>
-              </div>
-              <div class="date-pickertime">
-                <p class="" style="padding-bottom: 0; margin-bottom: 0;">*
-                  Lịch ngày dọn: <span>{{
-                    infor.scheduleList[0].workDate
-                    }} </span></p>
-                <p *ngIf="type == 'schedule'" class="" style="padding-bottom: 0; margin-bottom: 0;">*
-                  Lịch kết thúc: <span>{{
-                    infor.scheduleList[infor.scheduleList.length - 1].workDate
-                    }} </span></p>
-              </div>
-              <div *ngIf="type == 'schedule'" class="input-group">
-                <p>Tổng ngày dọn: {{infor.totalBookingDate}}</p>
-              </div>
-              <h6 class="text-primary text-uppercase resize">Nhân viên dọn dẹp </h6>
-              <p style="font-size: 1rem;
+        <div *ngIf="status == 'DONE'" class="rate">
+          <span *ngIf="status == 'DONE' && !noneRate">Điểm đánh giá dịch vụ: <div class="star-rating"
+              [innerHTML]="generateStarRating(ratingAverage)"></div></span>
+          <div *ngIf="status == 'DONE' && noneRate"><button class="btn btn-primary" style="">Đánh giá</button></div>
+        </div>
+        <div class="information">
+          <div class="infor-col1">
+            <h6 class="text-primary text-uppercase resize">Thông tin người dùng</h6>
+            <div class="input-group">
+              <p style="width: 90%; display: block;">
+                Tên chủ nhà(*): {{infor.hostName}}
+              </p>
+              <p style="width: 90%; display: block;">Số điện thoại(*): {{infor.hostPhone}}</p>
+            </div>
+            <div class="date-pickertime">
+              <p class="" style="padding-bottom: 0; margin-bottom: 0;">*
+                Lịch ngày dọn: <span>{{
+                  infor.scheduleList[0].workDate
+                  }} </span></p>
+              <p *ngIf="type == 'schedule'" class="" style="padding-bottom: 0; margin-bottom: 0;">*
+                Lịch kết thúc: <span>{{
+                  infor.scheduleList[infor.scheduleList.length - 1].workDate
+                  }} </span></p>
+            </div>
+            <div *ngIf="type == 'schedule'" class="input-group">
+              <p>Tổng ngày dọn: {{infor.totalBookingDate}}</p>
+            </div>
+            <h6 class="text-primary text-uppercase resize">Nhân viên dọn dẹp </h6>
+            <p style="font-size: 1rem;
                 font-weight: 300;
                 line-height: 1.7;
                 color: #000000de;
                 text-transform: lowercase;">
-                {{cleanerList}}
-              </p>
-              <p>Tổng người dọn: {{infor.totalBookingCleaner}}</p>
-              <h6 class="text-primary text-uppercase resize">Phương thức thanh toán </h6>
-              <p style="font-size: 1rem;
+              {{cleanerList}}
+            </p>
+            <p>Tổng người dọn: {{infor.totalBookingCleaner}}</p>
+          </div>
+          <div class="infor-col2">
+            <h6 class="text-primary text-uppercase resize">Thông tin nhà/khu vực vệ sinh</h6>
+            <div class="input-group">
+              <p>Loại hình nhà(*): {{infor.houseType}}</p>
+            </div>
+            <div class="input-group">
+              <p>Địa chỉ nơi dọn: {{infor.hostAddress}}</p>
+            </div>
+            <div class="input-group">
+              <!-- <p style="width: 90%; display: block;">Số tầng(*): {{infor.floorNumber}}</p> -->
+              <p style="width: 90%; display: block;"> Tổng diện tích
+                sàn(*): {{infor.floorArea}}</p>
+              <p class="description">Số lượng người dọn và giá (ước tính): <span>
+                  <b>{{cleanerNum}} người dọn dẹp</b> trong
+                  thời gian <b> {{duration}} tiếng </b> (giá dịch vụ: <b>{{formattedPrice}}</b>)
+                </span> </p>
+            </div>
+            <h6 class="text-primary text-uppercase resize">Phương thức thanh toán </h6>
+            <p style="font-size: 1rem;
             font-weight: 300;
             line-height: 1.7;
             color: #000000de;
             text-transform: lowercase;">
-                Thanh toán bằng tiền mặt
-              </p>
-            </div>
-            <div class="infor-col2">
-              <h6 class="text-primary text-uppercase resize">Thông tin nhà/khu vực vệ sinh</h6>
-              <div class="input-group">
-                <p>Loại hình nhà(*): {{infor.houseType}}</p>
-              </div>
-              <div class="input-group">
-                <p>Địa chỉ nơi dọn: {{infor.hostAddress}}</p>
-              </div>
-              <div class="input-group">
-                <!-- <p style="width: 90%; display: block;">Số tầng(*): {{infor.floorNumber}}</p> -->
-                <p style="width: 90%; display: block;"> Tổng diện tích
-                  sàn(*): {{infor.floorArea}}</p>
-                <p class="description">Số lượng người dọn và giá (ước tính): <span>
-                    <b>{{cleanerNum}} người dọn dẹp</b> trong
-                    thời gian <b> {{duration}} tiếng </b> (giá dịch vụ: <b>{{formattedPrice}}</b>)
-                  </span> </p>
-              </div>
-            </div>
+              Thanh toán bằng tiền mặt
+            </p>
           </div>
-          <h6 class="text-primary text-uppercase resize">Ghi chú</h6>
-          <div class="note-section">
-            <textarea [disabled]="true" style="width: 50%; padding-left: 1rem; padding-top: 0.5rem;" [value]="infor.note ? infor.note :'' " rows="3"
-              placeholder="Nhập ghi chú của bạn cho dịch vụ đăng ký"></textarea>
-          </div>Ư
-          <!-- <div class="table-responsive" style="margin-top: 2rem;">
-          <div class="showtime-bydate" *ngFor="let date of dateList">
-            <span> - {{date.name}}: ({{date.startTime}} - {{date.endTime}}): </span>
-            <span style="font-weight: 700; font-size: 16px"> {{date.workDate}} </span>
-            <u (click)="viewDetailinSchedule(date.id, date.workDate)"> (Xem chi tiết)</u>
-          </div>
-        </div> -->
         </div>
-        <div class="button-payment" style="display: flex; width: 100%;">
-          <div class="button-payment" style="display: flex; width: 100%;">
-            <div style="text-align: end; justify-content: center; margin-right: 1rem; width: 100%; padding-top: 10px;">
-              Tổng tiền đơn dịch vụ:
-              {{ formattedPrice }}
-              <button style="height: 35px; font-size: 11px; display: inline; margin-left: 3rem;"
-                class="btn btn-primary btn-pay" (click)="confirm(infor.id)">
-                Xác nhận đơn
-              </button>
-              <button style="height: 35px; font-size: 11px; display: inline;"
-              class="btn btn-danger btn-pay" (click)="cancel(infor.id)">
-              Hủy đơn
-            </button>
-            </div>
-    
-          </div>
-  
+        <h6 class="text-primary text-uppercase resize">Ghi chú</h6>
+        <div class="note-section">
+          <textarea [disabled]="true" style="width: 50%; padding-left: 1rem; padding-top: 0.5rem;"
+            [value]="infor.note ? infor.note :'' " rows="3"
+            placeholder="Nhập ghi chú của bạn cho dịch vụ đăng ký"></textarea>
         </div>
       </div>
-      <button mat-button class="button" (click)="onNoClick()"><img src="./assets/img/x-dialog.svg" /></button>
+      <div class="button-payment" style="display: flex; width: 100%;">
+        <div class="button-payment" style="display: flex; width: 100%;">
+          <div style="text-align: end; justify-content: center; margin-right: 1rem; width: 100%; padding-top: 10px;">
+            Tổng tiền đơn dịch vụ:
+            {{ formattedPrice }}
+            <button  *ngIf="type == 'schedule'" style="height: 35px; font-size: 11px; display: inline; margin-left: 3rem;"
+              class="btn btn-primary btn-pay" (click)="confirm(infor.id)">
+              Xem chi tiết
+            </button>
+            <button style="height: 35px; font-size: 11px; display: inline;" class="btn btn-danger btn-pay"
+              (click)="cancel(infor.id)">
+              Hủy đơn
+            </button>
+          </div>
+
+        </div>
+
+      </div>
     </div>
+    <button mat-button class="button" (click)="onNoClick()"><img src="./assets/img/x-dialog.svg" /></button>
   </div>
+</div>
